Fix logo spacing

--- a/less/style.less
+++ b/less/style.less
@@ -33,8 +33,10 @@ body {
 .navbar-header {
   // Override Bootstrap
   float: none;
-  .logo.pull-left {
+  .logo {
     float: none !important;
+    margin: 0;
+    padding: 0;
   }
 
   // Style
